# pico-12vrgb-hid-controller

./: .gitignore  CMakeLists.txt  LICENSE  README.md  test.py
cli/: Cargo.toml  README.md
cli/src/: cli.rs  device.rs  lib.rs  main.rs  temperature.rs
cli/src/cli/: animation.rs  lamparray.rs
cli/src/device/: unix.rs  windows.rs
fw/: CMakeLists.txt  README.md
fw/src/: config.h  debug.c  usb_descriptors.c  usb_hid.c
fw/src/color/: color.c
fw/src/controller/: controller.c  persist.c  sensor.c
fw/src/controller/animations/: fade.c
fw/src/device/: lamp.c
fw/src/include/: tusb_config.h
fw/src/include/color/: color.h
fw/src/include/controller/: controller.h  persist.h  sensor.h
fw/src/include/controller/animations/: fade.h
fw/src/include/device/: lamp.h  temperature.h
fw/src/include/hid/: descriptor.h
fw/src/include/hid/lights/: report.h
hw/: .gitignore  README.md
hw/case/: case.scad  case.stl
hw/pcb/: fp-lib-table  pico_12vrgb_controller.kicad_pcb  pico_12vrgb_controller.kicad_pro  pico_12vrgb_controller.kicad_sch  pico_12vrgb_controller.kicad_sym  sym-lib-table
hw/pcb/3dmodels/: README.md  moddiy_15pin_sata_right_angle_header.step  raspberry_pi_pico_r3.step
hw/pcb/gerbers/: pico_12vrgb_controller-B_Cu.gbr  pico_12vrgb_controller-B_Mask.gbr  pico_12vrgb_controller-B_Paste.gbr  pico_12vrgb_controller-B_Silkscreen.gbr  pico_12vrgb_controller-Edge_Cuts.gbr  pico_12vrgb_controller-F_Cu.gbr  pico_12vrgb_controller-F_Mask.gbr  pico_12vrgb_controller-F_Paste.gbr  pico_12vrgb_controller-F_Silkscreen.gbr  pico_12vrgb_controller-job.gbrjob  pico_12vrgb_controller.drl
hw/pcb/pico_12vrgb_controller.pretty/: ModDIY_SATA_15pin_RightAngle_Header.kicad_mod  PinHeader_12VGRB_Vertical_LeftText.kicad_mod  PinHeader_12VGRB_Vertical_RightText.kicad_mod  RPi_Pico_SMD.kicad_mod
src/: config.h  hid_lighting.h  main.c  rgb.c  rgb.h  tusb_config.h  usb_descriptors.c  usb_descriptors.h  usb_hid.c
src/color/: color.c
src/controller/: controller.c  persist.c  rgb.c  sensor.c
src/controller/animations/: fade.c
src/device/: lamp.c  temperature.c
src/include/: config.h  debug.h
src/include/color/: color.h
src/include/controller/: controller.h  persist.h  rgb.h  sensor.h
src/include/controller/animations/: fade.h
src/include/device/: lamp.h  specs.h
src/include/hid/: data.h  descriptor.h
src/include/hid/lights/: report.h  usage.h
src/include/hid/sensor/: report.h  usage.h
src/include/rgb/: rgb.h
src/rgb/: rgb.c
